--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "mobx": "^4.2.0",
     "mobx-react": "^5.0.0",
+    "mongoose": "^5.0.16",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
