--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.1",
-    "mongoose": "^5.0.17"
+    "mongoose": "^5.0.17",
+    "node-fetch": "^2.1.2"
   }
 }
