--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,11 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "express-restify-mongoose": "^4.3.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.1",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
     "node-fetch": "^2.1.2"
   }
