--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "^1.3.6",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -13,7 +14,7 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.1",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.17",
+    "mongoose": "^5.1.0",
     "node-fetch": "^2.1.2"
   }
 }
